--- a/src/main/resources/assets/thermal_foundation/lang/ja_jp.json
+++ b/src/main/resources/assets/thermal_foundation/lang/ja_jp.json
@@ -65,6 +65,9 @@
   "block.thermal.stripped_rubberwood_log": "樹皮を剥いだゴムノキの原木",
   "block.thermal.stripped_rubberwood_wood": "樹皮を剥いだゴムノキの木",
 
+  "entity.thermal.rubberwood_boat": "ボート",
+  "entity.thermal.rubberwood_chest_boat": "チェスト付きのボート",
+
   "item.thermal.raw_lead": "鉛の原石",
   "item.thermal.raw_nickel": "ニッケルの原石",
   "item.thermal.raw_silver": "銀の原石",
@@ -136,5 +139,8 @@
   "item.thermal.invar_gear": "インバーの歯車",
   "item.thermal.invar_ingot": "インバーインゴット",
   "item.thermal.invar_nugget": "インバー塊",
-  "item.thermal.invar_plate": "インバーのプレート"
+  "item.thermal.invar_plate": "インバーのプレート",
+
+  "item.thermal.rubberwood_boat": "ゴムノキのボート",
+  "item.thermal.rubberwood_chest_boat": "ゴムノキのチェスト付きのボート"
 }
